fix horizontal scroll

--- a/src/components/CheckTable/check_table.module.scss
+++ b/src/components/CheckTable/check_table.module.scss
@@ -5,7 +5,7 @@
   margin: auto;
 }
 
-.table-layout_left{
+.table-layout_left {
   margin: 0;
 }
 
@@ -55,7 +55,7 @@
     top: 0;
     background-color: var(--ps-background-color);
     z-index: 1;
-    &:last-child{
+    &:last-child {
       padding-right: 12px;
     }
   }
@@ -77,7 +77,12 @@
 
 .table-body .table-row:hover {
   cursor: default;
-  background: linear-gradient(0deg, var(--ps-table-hover), var(--ps-table-hover)), var(--ps-color-white);
+  background: linear-gradient(
+      0deg,
+      var(--ps-table-hover),
+      var(--ps-table-hover)
+    ),
+    var(--ps-color-white);
 }
 
 .table-row_archive {
@@ -162,25 +167,25 @@ td.table-col-full-rights div {
   font-weight: 500;
 }
 
-.table-grid { 
+.table-grid {
   display: grid;
   grid-template-rows: 1fr;
-  height: calc(100vh - 175px);
+  height: calc(100vh - 245px);
+  @media (max-width: 1200px) {
+    height: calc(100vh - 215px);
+  }
+  @media (max-width: 1020px) {
+    height: calc(100vh - 293px);
+  }
 }
 
 .grid-rows {
   grid-template-rows: calc(100% - 70px) minmax(0, 50px);
   gap: 10px;
   height: calc(100vh - 185px);
-  @media (max-width: 1200px) {
-    height: calc(100vh - 157px);
-  }
-  @media (max-width: 1020px) {
-    height: calc(100vh - 264px);
-  }
 }
 
-.table_hide { 
+.table_hide {
   grid-template-rows: 50px calc(100vh - 260px);
 }
 
